--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
 
 <body>
     <main>
+<!-- header-right -->
+        <header>
+            <div class="container">
+            <nav class="header-right">
+                <ul>
+                    <li><a href="#Livers">Livers</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Sponser">Sponser</a></li>
+                    <li><a href="#Service">Service</a></li>
+                    <li><a href="#Voice">Voice</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="#Company">Company</a></li>
+                </ul>
+            </nav>
+        </header>
 
-   <header>
-     <nav class="header-right">
-         <ul>
-            <li><a href="#Livers">Livers</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Sponser">Sponser</a></li>
-            <li><a href="#Service">Service</a></li>
-            <li><a href="#Voice">Voice</a></li>
-            <li><a href="#Contact">Contact</a></li>
-            <li><a href="#Company">Company</a></li>
-        </ul>
-        </nav>
-    </header>
+<!-- kv -->
+        <div class="kv">
+            <div class="box-img"></div>
+            <div class="box-img1"></div>
+            <div class="box-img2"></div>
+            <div class="box-img3"></div>
+            <div class="top-kv"></div>
+        </div>
 
-    <section class="kv-img">
-        <div class="kv-1"></div>
-        <div class="kv-2"></div>
-        <div class="kv-3"></div>
-        <div class="kv-4"></div>
-        
-        
 
-    </section>
+   
+
+
 
 
 
@@ -62,5 +67,7 @@
     <footer>
         <small>All rights reserved by Liver wall</small>
     </footer>
+</div>
 </body>
+
 </html>
