headerを変更しました

--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
 
 <body>
     <main>
-<!-- header-right -->
+        <!-- header-right -->
         <header>
             <div class="container">
-            <nav class="header-right">
-                <ul>
-                    <li><a href="#Livers">Livers</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Sponser">Sponser</a></li>
-                    <li><a href="#Service">Service</a></li>
-                    <li><a href="#Voice">Voice</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                    <li><a href="#Company">Company</a></li>
-                </ul>
-            </nav>
+                <nav class="header-right">
+                    <ul>
+                        <li><a href="#Livers">Livers</a></li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Sponser">Sponser</a></li>
+                        <li><a href="#Service">Service</a></li>
+                        <li><a href="#Voice">Voice</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                        <li><a href="#Company">Company</a></li>
+                    </ul>
+                </nav>
         </header>
 
-<!-- kv -->
-        <div class="kv">
+        <!-- kv -->
+        <section class="kv">
             <div class="box-img"></div>
             <div class="box-img1"></div>
             <div class="box-img2"></div>
             <div class="box-img3"></div>
             <div class="top-kv"></div>
-        </div>
-
-
-   
-
-
-
+            <div class="title-wrap">
+                <p class="main-subtaitle">No. 1 on customer support</p>
+                <p class="main-subtaitle">If you wanna be a pet<br>liver, this is your place</p>
+                <div class="title-wrap">
+                    <h1 class="main-title">LIVERS WALL</h1>
+                    <p>An experience you won’t forget<br>forever!</p>
+                </div>
+            </div>
+        </section>
 
 
 
@@ -67,7 +69,7 @@
     <footer>
         <small>All rights reserved by Liver wall</small>
     </footer>
-</div>
+    </div>
 </body>
 
 </html>
