--- a/index.html
+++ b/index.html
@@ -49,18 +49,28 @@
 
 
 
+<!-- About -->
 
+  <section class="container-wrap" id="About">
+    <h2 class="subtitle">About</h2>
+    <div class="container">
+      <img class="card-skin" src="./img/about_01.jpg" alt="about_01">
+      <p class="description">About us <br> We are a company that started with a <br> simple idea of “Having fun with your pet”. <br>As we could see, not only sharing those <br> joyfull moments was enough for the <br> audience. They wanted to participate, being present at the moment. That is <br> what we made come true</p>
+    </div>
+  </section>
+</main>
 
+<section class="container-wrap">
+    <div class="container">
+      <img class="card-skin2" src="./img/about_02.jpg" alt="about_02">
+      <p class="description">No. 1 customer support<br> 
+        We know you are not a proffesional liver. <br>You are an animal lover and that is why <br> we are here to support you. We have 24 <br> hours technical support about the <br> platform, seminars , and how you can <br> improve your performance.</p>
+    </div>
+    <div class="mulch-deco"></div>
+  </section>
+   
 
-
-
-
-
-
-
-
-
-
+<!--  -->
 
 
 
@@ -70,6 +80,16 @@
         <small>All rights reserved by Liver wall</small>
     </footer>
     </div>
+
+
+
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
