fujioka.html編集しました

--- a/fujioka.html
+++ b/fujioka.html
@@ -16,7 +16,7 @@
         <div class="container-livers">
             <div class="box-livers">
                 <div class="livers" id="Alice">
-                    <img src="./img2/liver_01.jpg" alt="">
+                    <img src="./img2/liver_01.jpg" alt="Alice">
                     <h3>Liver</h3>
                     <h2>Alice</h2>
                     <p>
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="livers" id="Nancy">
-                    <img src="./img2/liver_02.jpg" alt="">
+                    <img src="./img2/liver_02.jpg" alt="Nancy">
                     <h3>Liver</h3>
                     <h2>Nancy</h2>
                     <p>
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="livers" id="Mat">
-                    <img src="./img2/liver_03.jpg" alt="">
+                    <img src="./img2/liver_03.jpg" alt="Mat">
                     <h3>Liver</h3>
                     <h2>Mat</h2>
                     <p>
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="livers" id="Oscar">
-                    <img src="./img2/liver_04.jpg" alt="">
+                    <img src="./img2/liver_04.jpg" alt="Oscar">
                     <h3>Liver</h3>
                     <h2>Oscar</h2>
                     <p>
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="livers" id="Nataly">
-                    <img src="./img2/liver_05.jpg" alt="">
+                    <img src="./img2/liver_05.jpg" alt="Nataly">
                     <h3>Liver</h3>
                     <h2>Nataly</h2>
                     <p>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="livers" id="Zach">
-                    <img src="./img2/liver_06.jpg" alt="">
+                    <img src="./img2/liver_06.jpg" alt="Zach">
                     <h3>Liver</h3>
                     <h2>Zach</h2>
                     <p>
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="livers" id="John">
-                    <img src="./img2/liver_07.jpg" alt="">
+                    <img src="./img2/liver_07.jpg" alt="John">
                     <h3>Liver</h3>
                     <h2>John</h2>
                     <p>
@@ -79,18 +79,13 @@
                 </div>
 
                 <div class="livers" id="Simona">
-                    <img src="./img2/liver_08.jpg" alt="">
+                    <img src="./img2/liver_08.jpg" alt="Simona">
                     <h3>Liver</h3>
                     <h2>Simona</h2>
                     <p>
                         She is and she will be always my<br> first priority.
                     </p>
                 </div>
-                
-
-
-
-
             </div>
         </div>
     </section>
@@ -98,21 +93,55 @@
 
     <section class="sponser">
         <h1>Sponser</h1>
+        <div class="container-sponser">
+            <img src="./img2/animalprotection.jpg" alt="sponser">
+            <img src="./img2/animal_foundation.jpg" alt="sponser">
+            <h5>Liver Wall is sponser of animal protection association.</h5>
+        </div>
     </section>
 
 
     <section class="customer-voice">
         <h1>Customer Voice</h1>
+        <div class="container-customer-voice">
+            <div class="voice-left">
+                <img src="./img2/voice_01.jpg" alt="customer-voice">
+            </div>
+
+            <div class="voice-right">
+                <h4>Actual liver　Anna　</h4>
+                <h3>It is the best thing that<br> happened to my life</h3>
+                <p>
+                    At the beggining, I wasn’t sure to put me and my dog on air but after I did for the first time and see all the audience willing to see more and more... I was shocked! 
+                    I realized how much I can support someone by giving them a litle time of joy. 
+                </p>
+            </div>
+        </div>
     </section>
 
 
     <section class="company">
         <h1>Company</h1>
+        <div class="container-company">
+            <div class="company-left">
+                <h2>LIVERS WALL</h2>
+                <h3>Details</h3>
+                <p>CEO :  Cat lover Jennifer</p>
+                <p>tel  :  pets.lover@liverswall.com</p>
+                <p>Location  : San Francisco CA</p>
+                <p>Services : Pet liver entertainment,<br>
+                    Social experince with pets, volunteers,
+                    etc 
+                </p>
+            </div>   
+
+            <div class="company-right">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8679.57208534557!2d127.75502879720749!3d26.316503050913585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdcd47737aa1ef208!2zVGVjaE5leHQg5rKW57iE5qCh!5e0!3m2!1sja!2sjp!4v1655369906067!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>   
+        </div>
     </section>
-
-
-
     
+    <footer>All rights reserved by Liver wall</footer>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="./script.js"></script>
