エラー修正

--- a/index.html
+++ b/index.html
@@ -70,7 +70,44 @@
   </section>
    
 
-<!--  -->
+<!-- Service -->
+<!-- 途中 -->
+<section id="Service" class="block-section">
+    <h2>Plan</h2>
+
+    <div class="inline-block_test">
+        横並びにできます
+    </div>
+    <div class="inline-block_test">
+        横並びにできます
+    </div>
+    <div class="inline-block_test">
+        横並びにできます
+    </div>
+    
+
+<!-- 見本 -->
+    <div class="container">
+      <article class="card">
+        <h3 class="card-title">Free</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum quis maiores dolores veniam placeat maxime aut soluta in, aliquid, culpa quae fugit, accusantium vel. Labore nemo cumque laborum excepturi quasi!</p>
+      </article>
+      <article class="card">
+        <h3 class="card-title">Standard</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum quis maiores dolores veniam placeat maxime aut soluta in, aliquid, culpa quae fugit, accusantium vel. Labore nemo cumque laborum excepturi quasi!</p>
+      </article>
+      <article class="card">
+        <h3 class="card-title">Pro</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum quis maiores dolores veniam placeat maxime aut soluta in, aliquid, culpa quae fugit, accusantium vel. Labore nemo cumque laborum excepturi quasi!</p>
+      </article>
+    </div>
+  </section>
+
+
+
+
+
+
 
 
 
