--- a/fujioka.html
+++ b/fujioka.html
@@ -141,7 +141,7 @@
         </div>
     </section>
     
-    <footer>All rights reserved by Liver wall</footer>
+    <!-- <footer>All rights reserved by Liver wall</footer> -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="./script.js"></script>
