--- a/fujioka.html
+++ b/fujioka.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
 
     <title>pet_livers </title>
 </head>
+
 <body>
     <section class="pet-livers">
         <h1>Pet Livers</h1>
@@ -56,7 +58,7 @@
                     <h3>Liver</h3>
                     <h2>Nataly</h2>
                     <p>
-                        It is totally normal to undestand<br> your pet feelings. 
+                        It is totally normal to undestand<br> your pet feelings.
                     </p>
                 </div>
 
@@ -112,8 +114,9 @@
                 <h4>Actual liver　Anna　</h4>
                 <h3>It is the best thing that<br> happened to my life</h3>
                 <p>
-                    At the beggining, I wasn’t sure to put me and my dog on air but after I did for the first time and see all the audience willing to see more and more... I was shocked! 
-                    I realized how much I can support someone by giving them a litle time of joy. 
+                    At the beggining, I wasn’t sure to put me and my dog on air but after I did for the first time and
+                    see all the audience willing to see more and more... I was shocked!
+                    I realized how much I can support someone by giving them a litle time of joy.
                 </p>
             </div>
         </div>
@@ -126,24 +129,28 @@
             <div class="company-left">
                 <h2>LIVERS WALL</h2>
                 <h3>Details</h3>
-                <p>CEO :  Cat lover Jennifer</p>
-                <p>tel  :  pets.lover@liverswall.com</p>
-                <p>Location  : San Francisco CA</p>
+                <p>CEO : Cat lover Jennifer</p>
+                <p>tel : pets.lover@liverswall.com</p>
+                <p>Location : San Francisco CA</p>
                 <p>Services : Pet liver entertainment,<br>
                     Social experince with pets, volunteers,
-                    etc 
+                    etc
                 </p>
-            </div>   
+            </div>
 
             <div class="company-right">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8679.57208534557!2d127.75502879720749!3d26.316503050913585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdcd47737aa1ef208!2zVGVjaE5leHQg5rKW57iE5qCh!5e0!3m2!1sja!2sjp!4v1655369906067!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>   
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8679.57208534557!2d127.75502879720749!3d26.316503050913585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdcd47737aa1ef208!2zVGVjaE5leHQg5rKW57iE5qCh!5e0!3m2!1sja!2sjp!4v1655369906067!5m2!1sja!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
-    
+
     <!-- <footer>All rights reserved by Liver wall</footer> -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="./script.js"></script>
 </body>
+
 </html>
