修正しました

--- a/index.html
+++ b/index.html
@@ -2,75 +2,79 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./recet.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./recet.css">
 
-    <title>pet_livers </title>
+  <title>pet_livers </title>
 </head>
 
 <body>
-    <main>
-        <!-- header-right -->
-        <header>
-            <div class="container">
-                <nav class="header-right">
-                    <ul>
-                        <li><a href="#Livers">Livers</a></li>
-                        <li><a href="#About">About</a></li>
-                        <li><a href="#Sponser">Sponser</a></li>
-                        <li><a href="#Service">Service</a></li>
-                        <li><a href="#Voice">Voice</a></li>
-                        <li><a href="#Contact">Contact</a></li>
-                        <li><a href="#Company">Company</a></li>
-                    </ul>
-                </nav>
-        </header>
+  <main>
+    <!-- header-right -->
+    <header>
+      <div class="container">
+        <nav class="header-right">
+          <ul>
+            <li><a href="#Livers">Livers</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Sponser">Sponser</a></li>
+            <li><a href="#Service">Service</a></li>
+            <li><a href="#Voice">Voice</a></li>
+            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#Company">Company</a></li>
+          </ul>
+        </nav>
+    </header>
 
-        <!-- kv -->
-        <section class="kv">
-            <div class="box-img"></div>
-            <div class="box-img1"></div>
-            <div class="box-img2"></div>
-            <div class="box-img3"></div>
-            <div class="top-kv"></div>
-            <div class="title-wrap">
-                <p class="main-subtaitle">No. 1 on customer support</p>
-                <p class="main-subtaitle">If you wanna be a pet<br>liver, this is your place</p>
-                <div class="title-wrap">
-                    <h1 class="main-title">LIVERS WALL</h1>
-                    <p>An experience you won’t forget<br>forever!</p>
-                </div>
-            </div>
-        </section>
+    <!-- kv -->
+    <section class="kv">
+      <div class="box-img"></div>
+      <div class="box-img1"></div>
+      <div class="box-img2"></div>
+      <div class="box-img3"></div>
+      <div class="top-kv"></div>
+      <div class="title-wrap">
+        <p class="main-subtaitle">No. 1 on customer support</p>
+        <p class="main-subtaitle">If you wanna be a pet<br>liver, this is your place</p>
+        <div class="title-wrap">
+          <h1 class="main-title">LIVERS WALL</h1>
+          <p>An experience you won’t forget<br>forever!</p>
+        </div>
+      </div>
+    </section>
 
 
 
-<!-- About -->
+    <!-- About -->
 
-  <section class="container-wrap" id="About">
-    <h2 class="subtitle">About</h2>
-    <div class="container">
-      <img class="card-skin" src="./img/about_01.jpg" alt="about_01">
-      <p class="description">About us <br> We are a company that started with a <br> simple idea of “Having fun with your pet”. <br>As we could see, not only sharing those <br> joyfull moments was enough for the <br> audience. They wanted to participate, being present at the moment. That is <br> what we made come true</p>
-    </div>
-  </section>
-</main>
+    <section class="container-wrap" id="About">
+      <h2 class="subtitle">About</h2>
+      <div class="container">
+        <img class="card-skin" src="./img/about_01.jpg" alt="about_01">
+        <p class="description">About us <br> We are a company that started with a <br> simple idea of “Having fun with
+          your pet”. <br>As we could see, not only sharing those <br> joyfull moments was enough for the <br> audience.
+          They wanted to participate, being present at the moment. That is <br> what we made come true</p>
+      </div>
+    </section>
+  </main>
 
-<section class="container-wrap">
+  <section class="container-wrap">
     <div class="container">
       <img class="card-skin2" src="./img/about_02.jpg" alt="about_02">
-      <p class="description">No. 1 customer support<br> 
-        We know you are not a proffesional liver. <br>You are an animal lover and that is why <br> we are here to support you. We have 24 <br> hours technical support about the <br> platform, seminars , and how you can <br> improve your performance.</p>
+      <p class="description">No. 1 customer support<br>
+        We know you are not a proffesional liver. <br>You are an animal lover and that is why <br> we are here to
+        support you. We have 24 <br> hours technical support about the <br> platform, seminars , and how you can <br>
+        improve your performance.</p>
     </div>
     <div class="mulch-deco"></div>
   </section>
-   
 
-<!-- 途中
+
+  <!-- 途中
 <section id="Service" class="block-section">
     <h2>Plan</h2>
 
@@ -84,9 +88,9 @@
         横並びにできます
     </div>
 -->
-    
 
-<!-- 見本 
+
+  <!-- 見本 
     <div class="container">
       <article class="card">
         <h3 class="card-title">Free</h3>
@@ -112,20 +116,20 @@
 
 
 
-    </main>
-
-   
-    </div>
+  </main>
 
 
+  </div>
 
 
 
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./script.js"></script>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
