scss配置以外は書いたけど全然かからなくてヤバイことなってます

--- a/fujioka.html
+++ b/fujioka.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="livers" id="Simona">
-                    <img src="./img2/liver_08.jpg" alt="Simona">
+                    <img src="./img2/liver_09.jpg" alt="Simona">
                     <h3>Liver</h3>
                     <h2>Simona</h2>
                     <p>
@@ -96,8 +96,8 @@
     <section class="sponser">
         <h1>Sponser</h1>
         <div class="container-sponser">
-            <img src="./img2/animalprotection.jpg" alt="sponser">
-            <img src="./img2/animal_foundation.jpg" alt="sponser">
+            <img src="./img2/animalprotection.jpg" alt="sponser" id="animal-rights">
+            <img src="./img2/animal_foundation.jpg" alt="sponser" id="animal-foundation" >
             <h5>Liver Wall is sponser of animal protection association.</h5>
         </div>
     </section>
