--- a/index.html
+++ b/index.html
@@ -165,9 +165,17 @@
   </section>
 
   <!-- Contact -->
+<section class="container-wrap">
+  <h1>Contact</h1>
+<form>
+  <input type="text" name="name" placeholder="Name">
+  <input type="email" name="email" placeholder="Email">
+  <input type="tel" name="tel" placeholder="Tel">
   
+  <button type="submit">Submit</button>
+</form>
 
-
+</section>
 
 
 
@@ -182,8 +190,6 @@
 
   </main>
   </div>
-
-
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
