スポンサー

--- a/fujioka.html
+++ b/fujioka.html
@@ -101,8 +101,14 @@
     <section class="sponser">
         <h1>Sponser</h1>
         <!-- <div class="container-sponser"> -->
-            <img src="./img2/animalprotection.jpg" alt="sponser" id="animal-rights">
-            <img src="./img2/animal_foundation.jpg" alt="sponser" id="animal-foundation" >
+          <div class="sponser1">
+              <img src="./img2/animalprotection.jpg" alt="sponser" id="animal-rights">
+          </div>  
+
+          <div sponser2>
+              <img src="./img2/animal_foundation.jpg" alt="sponser" id="animal-foundation" >
+          </div>
+
             <h5>Liver Wall is sponser of animal protection association.</h5>
         <!-- </div> -->
     </section>
