配置適当だけど完にします（６０％）ほど

--- a/fujioka.html
+++ b/fujioka.html
@@ -105,7 +105,7 @@
               <img src="./img2/animalprotection.jpg" alt="sponser" id="animal-rights">
           </div>  
 
-          <div sponser2>
+          <div class="sponser2">
               <img src="./img2/animal_foundation.jpg" alt="sponser" id="animal-foundation" >
           </div>
 
