--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <main>
-    <!----- header-right ----->
+  
+    <!----- nav ----->
     <header>
-      <div class="container">
+      <div class="nav">
         <nav class="header-right">
           <ul>
             <li><a href="#Livers">Livers</a></li>
@@ -30,58 +30,85 @@
         </nav>
     </header>
 
-
+    <main>
     <!----- kv ----->
     <section class="kv">
-      <div class="box-img"></div>
-      <div class="box-img1"></div>
-      <div class="box-img2"></div>
-      <div class="box-img3"></div>
-      <div class="top-kv"></div>
+      
+      <div class="kv-img1"></div>
+      <div class="kv-img2"></div>
+      <div class="kv-img3"></div>
+      <div class="kv-img4"></div>
+
       <div class="title-wrap">
-        <img src="./img/kv_pc.png" alt="kv">
+      <div class="textarea">
+        <div class="text-container"></div>
         <p>No. 1 on customer support</p>
       </div>
-      <div class="title-wpap2">
+
+      <div class="text-container">
         <p>If you wanna be a pet<br>liver, this is your place</p>
       </div>
+
       <h1 class="main-title">LIVERS WALL</h1>
-      <div class="title-wrap3">
+
+      <div class="text-container1">
         <p>An experience you won't forget<br>forever!</p>
       </div>
-    
+      </div>
+      <div class="kv-pc">
+      <img src="./img/kv_pc.png" alt="kv-pc">
+    </div>
+
     </section>
 
 
 
     <!----- About ----->
 
-    <section class="container-wrap" id="About">
-      <h2 class="About">About</h2>
-      <div class="container">
-        <img class="card-skin" src="./img/about_01.jpg" alt="">
-        <p class="description"> About us<br> We are a company that started with a <br> simple idea of “Having fun with
+    <section class="container">
+      <div class="about-right">
+      <div class="about">
+      <h1 id="about">
+        About
+      </h1>
+        <img class="picture" src="./img/about_01.jpg" alt="picture">
+      </div>
+      <div class="container-wrap">
+      <h2>About us</h2>
+        <p> We are a company that started with a <br> simple idea of “Having fun with
           your pet”. <br>As we could see, not only sharing those <br> joyfull moments was enough for the <br> audience.
-          They wanted to participate, being present at the moment. That is <br> what we made come true</p>
+          They wanted to participate, being present at the moment. That is <br> what we made come true
+        </p>
+        </div>
+        </div>
       </div>
     </section>
-  </main>
 
-  <section class="container-wrap">
-    <div class="container">
-      <img class="card-skin2" src="./img/about_02.jpg" alt="">
-      <p class="description">No. 1 customer support<br>
-        We know you are not a proffesional liver. <br>You are an animal lover and that is why <br> we are here to
-        support you. We have 24 <br> hours technical support about the <br> platform, seminars , and how you can <br>
-        improve your performance.</p>
+
+    <section class="container">
+    <div class="about-left">
+      <div class="about">
+      <img class="picture" src="./img/about_02.jpg" alt="picture">
     </div>
+    <div class="container-wrap">
+      <h2>No. 1 customer support</h2>
+      <p>We know you are not a proffesional liver. <br>You are an animal lover and that is why <br> we are here to
+        support you. We have 24 <br> hours technical support about the <br> platform, seminars , and how you can <br>
+        improve your performance.
+      </p>
+      </div>
+    </div>
+    </section>
+
     <div class="mulch-deco"></div>
-  </section>
+
+
+
+
 
 
   <!----- Service ------>
-
-  <section class="container-wrap">
+  <section class="">
     <div class="Service">
       <h1 id="Service">Service</h1>
 
@@ -164,26 +191,38 @@
     </div>
   </section>
 
-  <!-- Contact -->
-<section class="container-wrap">
-  <h1>Contact</h1>
-<form>
-  <input type="text" name="name" placeholder="Name">
-  <input type="email" name="email" placeholder="Email">
-  <input type="tel" name="tel" placeholder="Tel">
-  
-  <button type="submit">Submit</button>
-</form>
+<!-- contact -->
+<section class="contact">
+  <form class="container">
 
+    <label for="fastname">Name</label>
+    <input type="text" id="name" name="name">
+
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email">
+
+    <label for="tel">Tel</label>
+    <input type="text" id="tel" name="tel">
+
+    <label for="content">Content</label>
+    <textarea id="content" name="content"  style="height:250px"></textarea>
+
+    <button type="submit" value="Submit"></button>
+    <input type="submit" class="form-btn" value="Submit">
+
+  </form>
 </section>
 
 
 
 
-
-
-
-
+<!-- 真ん中ボーダー見本 -->
+<div class="wrap">
+  <div class="box-a">ボックスA</div>
+  <div class="box-b">ボックスB</div>
+ </div>
+  
+  
 
 
 
