--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
       <div class="title-wrap">
       <div class="textarea">
-        <div class="text-container"></div>
+        <div class="text-container">
         <p>No. 1 on customer support</p>
       </div>
-
+    </div>
       <div class="text-container">
         <p>If you wanna be a pet<br>liver, this is your place</p>
       </div>
