一旦コミットします

--- a/fujioka.html
+++ b/fujioka.html
@@ -117,6 +117,13 @@
     <section class="customer-voice">
         <h1>Customer Voice</h1>
         <div class="container-customer-voice">
+
+                <!-- <img src="./img2/deco_07.png"  id="left-top" alt="deco">
+                <img src="./img2/deco_09.png" id="left-bottom" alt="deco">
+                <img src="./img2/deco_08.png" id="right-top" alt="deco">
+                <img src="./img2/deco_10.png" id="right-bottom" alt="deco"> -->
+           
+
             <div class="voice-left">
                 <img src="./img2/voice_01.jpg" alt="customer-voice">
             </div>
