直りません、、 とりあえずコードだけ書いておきます

--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
 
 
   <!----- Service ------>
-  <section class="">
+  <section class="container">
     <div class="Service">
       <h1 id="Service">Service</h1>
 
       <div class="container">
         <div class="card-skin3">
         <div class="box">
-          <img src="./img/icon_01.png" alt="">
+          <img src="./img/icon_01.png" alt="icon">
           <h2 class="description">Do you wanna be on TV?</h2>
            <p class="description2"> We have strong connections with the <br>media so there areplenty of <br> oportunities to be famous too!
           </p>
         </div>
         
         <div class="box">
-          <img src="./img/icon_02.png" alt="">
+          <img src="./img/icon_02.png" alt="icon">
           <h2 class="description">Even during the event we got your back<br>You can ask for support during your live
             <br>session! there will for sure a response<br>within 15 minutes after your request.
           </h2>
         </div>
         
         <div class="box">
-          <img src="./img/icon_03.png" alt="">
+          <img src="./img/icon_03.png" alt="icon">
           <h2 class="description">Need legal support? <br>We got your back here too!<br>If you are struggling paying
             taxes<br>or organizing your incomes, we<br>have expert lawyers and<br>accountants that can help you
           </h2>
@@ -141,7 +141,7 @@
       <div class="container">
         <div class="card-skin3">
         <div class="box">
-          <img src="./img/icon_04.png" alt="">
+          <img src="./img/icon_04.png" alt="icon">
           <h2 class="description">Fully support</h2>
           <p class="description2">
           Your audience is not increasing as it<br>was expected? we give you
