--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
         <!----- Service ------>
 
-        <div class="service">
+        <!-- <div class="service">
             <h1 id="Service">Service</h1>
 
             <div class="box-a">
@@ -436,8 +436,79 @@
                     we<br>have expert lawyers and<br>accountants thatcan help you
                 </p>
             </div>
-        </div>
+        </div> -->
 
+        <div class="service">
+          <h1 id="Service">Service</h1>
+
+          <div class="box-a">
+              <img src="./img/icon_01.png" alt="icon">
+              <h2>Do you wanna be on TV?</h2>
+              <p> We have strong connections with the <br>media so there areplenty of<br> oportunities to be famous
+                  too!
+              </p>
+
+              <img src="./img/icon_02.png" alt="icon">
+              <h2>Even during the event we <br> got your back</h2>
+              <p>ou can ask for supportduring your live<br>session! there will for sure a response<br>within 15
+                  minutes after your request.
+              </p>
+
+
+              <img src="./img/icon_03.png" alt="icon">
+              <h2>Need legal support?</h2>
+              <p>We got your back here too!<br>If you arestruggling payingtaxes<br>or organizing your incomes,
+                  we<br>have expert lawyers and<br>accountants thatcan help you
+              </p>
+          </div>
+      
+
+
+
+      <div class="box-b">
+          <img src="./img/icon_04.png" alt="icon">
+          <h2>Fully support</h2>
+          <p>Your audience is not increasing as it<br>was expected? we give you
+              free pass<br>to consult our marketing experts and<br>ask for advice
+          </p>
+
+
+          <img src="./img/icon_05.png" alt="">
+          <h2>Connection</h2>
+          <p>You are also able to connect with<br>other livers andpets to interactwith <br>
+              them and also make new friends!
+          </p>
+
+          <img src="./img/icon_06.png" alt="">
+          <h2>Customer satisfaction</h2>
+          <p>You can see the data of your<br>customer inthe platform,
+              analyze it<br>and prepare for the next session
+          </p>
+      </div>
+
+
+
+      <div class="box-c">
+          <img src="./img/icon_07.png" alt="">
+          <h2>Free seminar</h2>
+          <p>Every month we are holding <br> informative seminars where you can <br>
+              get new information and also <br> improve your skills.
+          </p>
+
+          <img src="./img/icon_08.png" alt="">
+          <h2>Good competition</h2>
+          <p>Everybody needs a good rival to improve <br>yourself and here yougot a lot! there are <br>
+              reviews every month where you can see the <br> ranks of yourpopularity and get<br> motivated.
+          </p>
+
+          <img src="./img/icon_09.png" alt="">
+          <h2>Free counseling </h2>
+          <p>Whatever and whenever you have a <br> question,do not hesitate tocall the <br> support center. We give
+              fully attention <br>
+              for 24 hours.
+          </p>
+      </div>
+  </div>
 
 
         <div class="box-b">
